fix learning_zig css for mobile

--- a/src/learning_zig/08-coding_in_zig.html
+++ b/src/learning_zig/08-coding_in_zig.html
@@ -326,6 +326,8 @@ pub fn main() !void {
 pub const Logger = struct {
 	level: Level,
 
+	// "error" is reserved, names inside an @"..." are always
+	// treated as identifiers
 	const Level = enum {
 		debug,
 		info,
