--- a/src/learning_zig/06-heap_memory.html
+++ b/src/learning_zig/06-heap_memory.html
@@ -40,7 +40,7 @@ pub fn main() !void {
 	const allocator = gpa.allocator();
 
 	// ** The next two lines are the important ones **
-	var arr = try allocator.alloc(usize, getRandomCount());
+	var arr = try allocator.alloc(usize, try getRandomCount());
 	defer allocator.free(arr);
 
 	for (0..arr.len) |i| {
@@ -49,9 +49,10 @@ pub fn main() !void {
 	std.debug.print("{any}\n", .{arr});
 }
 
-fn getRandomCount() u8 {
-	const seed = std.time.timestamp();
-	var random = std.rand.DefaultPrng.init(@intCast(seed));
+fn getRandomCount() !u8 {
+	var seed: u64 = undefined;
+	try std.os.getrandom(std.mem.asBytes(&seed));
+	var random = std.rand.DefaultPrng.init(seed);
 	return random.random().uintAtMost(u8, 5) + 5;
 }
 {% endhighlight %}
