fix invalid code

--- a/src/learning_zig/07-generics.html
+++ b/src/learning_zig/07-generics.html
@@ -45,7 +45,7 @@ fn IntArray(comptime length: usize) type {
 const std = @import("std");
 
 pub fn main() !void {
-	var arr = IntArray(3);
+	var arr: IntArray(3) = undefined;
 	arr.items[0] = 1;
 	arr.items[1] = 10;
 	arr.items[2] = 100;
