--- a/src/learning_zig/00-index.html
+++ b/src/learning_zig/00-index.html
@@ -15,6 +15,13 @@ permalink: "/learning_zig/"
 	</section>
 
 	<section>
+		<h2 tabindex=-1 id=toc><a href=#toc aria-hidden=true>Translations</a></h2>
+		<ol>
+			<li><a href="https://zigcc.github.io/learning-zig/index.html">Chinese</a> - by Jiacai Liu
+		</ol>
+	</section>
+
+	<section>
 		<h2 tabindex=-1 id=toc><a href=#toc aria-hidden=true>Table of Contents</a></h2>
 		<ol>
 			<li><a href=#install>Installing Zig</a>
