--- a/src/learning_zig/02-language-overview-2.html
+++ b/src/learning_zig/02-language-overview-2.html
@@ -145,7 +145,7 @@ fn indexOf(haystack: []const u32, needle: u32) ?usize {
 }
 {% endhighlight %}
 
-		<aside>This is a sneak peak at nullable types.</aside>
+		<aside>This is a sneak peek at nullable types.</aside>
 
 		<p>The end of the range is inferred by the length of <code>haystack</code>,  though we could punish ourselves and write: <code>0..hastack.len</code>. <code>for</code> loops don't support the more generic <code>init; compare; step</code> idiom. For this, we rely on <code>while</code>.</p>
 
