explain why 'pub' was used

--- a/src/learning_zig/01-language-overview-1.html
+++ b/src/learning_zig/01-language-overview-1.html
@@ -160,7 +160,7 @@ pub const User = struct {
 };
 {% endhighlight %}
 
-		<aside>Since our program is a single file and therefore <code>User</code> is only used in the file where it's defined, we didn't need to make it <code>pub</code>.</aside>
+		<aside>Since our program is a single file and therefore <code>User</code> is only used in the file where it's defined, we didn't need to make it <code>pub</code>. But then we wouldn't have seen how to expose a declaration to other files.</aside>
 
 		<p>Struct fields are terminated with a comma and can be given a default value:</p>
 
