add paths to build.zig.zon example

--- a/src/learning_zig/08-coding_in_zig.html
+++ b/src/learning_zig/08-coding_in_zig.html
@@ -634,6 +634,7 @@ _ = b.addModule("calc", .{
 {% highlight zig %}
 .{
   .name = "learning",
+  .paths = .{""},
   .version = "0.0.0",
   .dependencies = .{
     .calc = .{
